@@ -4,6 +4,9 @@ Revision history for libev, a high-performance and full-featured event loop.
         - remove dependency on sys/queue.h on freebsd (patch by Vanilla Hsu).
         - configure now prepends -O3, not appends it, so one can still
           override it.
+        - disable poll backend on AIX, the poll header spams the namespace
+          and it's not worth working around dead platforms (reported
+          and analyzed by Aivars Kalvans).
 
 3.9  Thu Dec 31 07:59:59 CET 2009
 	- signalfd is no longer used by default and has to be requested
